--- a/sass/components/_carrousel-big.sass
+++ b/sass/components/_carrousel-big.sass
@@ -17,6 +17,7 @@
     position: relative
     margin-right: 5px
     margin-top: 10px
+    height: 433px
     &:first-child
       margin-left: 58px
 
@@ -31,6 +32,9 @@
   color: map-get($font-colors, 'default')
   font-family: map-get($font-fams, 'default')
   opacity: 0
+  display: flex
+  flex-direction: column
+  justify-content: flex-end
   &:hover
     opacity: 1
   a img
@@ -39,12 +43,12 @@
     font-size: 16px
     letter-spacing: 1.2px
     line-height: 19px
-    margin: 5px 0
+    margin-top: 5px
   .cover-details
-      line-height: 17px
-      vertical-align: bottom
-      margin-top: 2px
-      box-sizing: border-box
+    line-height: 17px
+    vertical-align: bottom
+    margin-top: 6px
+    box-sizing: border-box
     .match
       color: map-get($font-colors, 'match')
       font-size: 14px
@@ -53,13 +57,13 @@
     .rating
       font-size: 14px
       border: 1px solid rgba(255,255,255,0.41)
-      padding: 0 6px 3px 7px
+      padding: 0 6px 2px 6px
       margin: 0 4px 0 2px
       box-sizing: border-box
     .duration
       font-size: 14px
       margin-top: 2px
   .cover-bio
-    margin-top: 8px
+    margin-top: 6px
     font-size: 14px
     line-height: 18px
